#Author:Gliu
#Created:2015/12/14

file(GLOB_RECURSE SRC_LIST *.hpp *.cpp)

ADD_EXECUTABLE(${TESTZMQ_EXE} ${SRC_LIST})

#set(CMAKE_INCLUDE_CURRENT_DIR ON)
target_link_libraries(${TESTZMQ_EXE} ${ZMQLIB_LIB} )

message(STATUS "CMAKE_CURRENT_SOURCE_DIR =" ${CMAKE_CURRENT_SOURCE_DIR})

#install(TARGETS ${TESTZMQ_EXE} DESTINATION ${CMAKE_CURRENT_SOURCE_DIR})
